--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "delete:docs": "del-cli docs",
     "build:href": "ng build --base-href ./",
-    "copy:dist": "copyfiles dist/heroes-app/browser/* ./docs -f",
+    "copy:dist": "copyfiles dist/country-app/browser/* ./docs -f",
     "build:github": "npm run delete:docs && npm run build:href && npm run copy:dist",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -31,6 +31,8 @@
     "@angular/cli": "^17.3.8",
     "@angular/compiler-cli": "^17.3.0",
     "@types/jasmine": "~5.1.0",
+    "copyfiles": "^2.4.1",
+    "del-cli": "^6.0.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
